RESOLVED FIXED44240
REGRESSION (r62896): Interpreter incorrectly excludes prototype chain when validating put_by_id_transition
https://bugs.webkit.org/show_bug.cgi?id=44240
Summary REGRESSION (r62896): Interpreter incorrectly excludes prototype chain when va...
David Kilzer (:ddkilzer)
Reported 2010-08-19 04:41:25 PDT
LayoutTests/fast/js/dictionary-no-cache.html fails using the JSC interpreter, but passes using the JSC JIT. --- a/LayoutTests/fast/js/dictionary-no-cache-expected.txt +++ b/LayoutTests/fast/js/dictionary-no-cache-expected.txt @@ -5,7 +5,7 @@ On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE PASS foundNewPrototypeProperty is true PASS foundRemovedPrototypeProperty is false -PASS calledNewPrototypeSetter is true +FAIL calledNewPrototypeSetter should be true. Was false. PASS getTestProperty(test4) is "on prototype" PASS getTestProperty(test4) is "on self" PASS getTestProperty(test5) is "on prototype's prototype"
Attachments
Patch (1.60 KB, patch)
2010-08-23 16:51 PDT, Oliver Hunt
darin: review+
David Kilzer (:ddkilzer)
Comment 1 2010-08-19 04:48:05 PDT
Oliver Hunt
Comment 2 2010-08-23 16:32:10 PDT
*** Bug 44241 has been marked as a duplicate of this bug. ***
Oliver Hunt
Comment 3 2010-08-23 16:51:37 PDT
Darin Adler
Comment 4 2010-08-23 16:54:25 PDT
Comment on attachment 65184 [details] Patch Is there a regression test covering this already?
Oliver Hunt
Comment 5 2010-08-23 17:05:39 PDT
Committed r65847
David Kilzer (:ddkilzer)
Comment 6 2010-08-23 17:40:37 PDT
(In reply to comment #4) > (From update of attachment 65184 [details]) > Is there a regression test covering this already? Yes, except we don't have any buildbots running tests with the JSC Interpreter: fast/js/dictionary-no-cache.html fast/js/pic/cached-prototype-setter.html
David Kilzer (:ddkilzer)
Comment 7 2010-08-24 10:08:04 PDT
The regression was introduced in r62896 for Bug 41929. <http://trac.webkit.org/changeset/62896>
Note You need to log in before you can comment on or make changes to this bug.