2010-08-23  Oliver Hunt  <oliver@apple.com>

Reviewed by Darin Adler.

        [REGRESSION] Interpreter incorrectly excludes prototype chain when validating put_by_id_transition
        https://bugs.webkit.org/show_bug.cgi?id=44240
        <rdar://problem/8328995>

        Fix an error I introduced when cleaning up the interpreter side of the logic
        to prevent setters being called in object initialisers.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):

Canonical link: https://commits.webkit.org/56626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65847 268f45cc-cd09-0410-ab3c-d52691b4dbfc